--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         height: 16rem;
         width: 15rem;
       }
+      .head{
+        font-size: 0.5rem;
     }                                                                        
   </style>
 </head>
