--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       font-size: 1rem;
 
     } 
-    @media (max-width:600px){
+    @media (max-width:375px){
       body{
         height: 100vh;
       }
@@ -62,13 +62,13 @@
         width: 15rem;
       }
       .head{
-        font-size: 0.5rem;
+        font-size: ;
     }                                                                        
   </style>
 </head>
 <body>
   <div class="box">
-      <img class="qr" src="images/image-qr-code.png">
+      <img class="qr" src="images/image-qr-code.png" alt="QR code image">
     <div class="head">Improve your front-end skills by building projects</div>
     <div class="para">Scan the QR code to visit Frontend mentor and take your coding skills to the next level</div>
   </div>
